# currencyExchangeFastAPI

./: .env-example  .gitignore  Dockerfile.dev  Dockerfile.prod  Readme.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
app/: config.py  database.py  dependencies.py  logging_config.py  middlewares.py  models.py
app/exceptions/: exceptions.py  handlers.py
app/interfaces/repositories/: __init__.py  base.py  currencies.py  exchange_rates.py
app/migrations/: env.py
app/migrations/versions/: 84002fb0f925_.py  e4d845f1bec1_.py
app/models/: currencies.py  exchange_rates.py
app/repositories/: __init__.py  currencies.py  exchange_rates.py
app/routers/: __init__.py  currencies.py  exchange_rates.py  exchanges.py
app/schemas/: __init__.py  base.py  currencies.py  exchange_rates.py  exchanges.py
app/services/: __init__.py  db_service.py  exchange_service.py
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/frontend/js/: app.js
frontend/: Dockerfile.frontend  nginx.conf
frontend/js/: app.js
